# kk_frame

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.py  date2ver  fastCheck.sh  main.cc  requirements.txt
.agents/: build_validation.md  git_workflow.md
assets/animator/: btn_click_alpha.xml  btn_click_scale.xml  btn_click_scale_alpha.xml
assets/color/: btn_state_enable.xml  text_demo_title.xml  text_title.xml  wifi.xml
assets/drawable/: bg_demo.xml  bg_toast.xml  factory_color_test.xml  factory_menu_btn.xml  factory_scrollview_thumb.xml  factory_switch_item.xml  factory_switch_thumb.xml  factory_switch_track.xml  keyboard_backspace.xml  keyboard_bg.xml  keyboard_box.xml  keyboard_enter.xml  keyboard_func.xml  keyboard_func_press.xml  keyboard_func_unpress.xml  keyboard_input.xml  keyboard_key_bg_0.xml  keyboard_key_bg_0_press.xml  keyboard_key_bg_0_unpress.xml  keyboard_shift.xml  keyboard_show.xml  keyboard_space_h.xml
assets/layout/: keyboard.xml  keyboard_cn.xml  keyboard_cn_candidate.xml  keyboard_en.xml  module_cover_toast.xml  module_sidebar.xml  module_toast.xml  page_demo.xml  page_factory.xml  page_factory_auth.xml  page_factory_color.xml  page_factory_info.xml  page_factory_network.xml  page_factory_switch.xml  page_factory_switch_item.xml  page_factory_touch.xml  page_factory_wifi.xml  page_home.xml  page_standby.xml  screensave.xml  wind.xml  wind_base.xml
assets/values/: colors.xml  factory.xml  fonts.xml  keyboard.xml  style.xml  theme.xml
board/: app.sh  before.sh  check.sh  env.sh  input-devices.xml  run.sh  start.sh  stop.sh  updating.sh  upgrade.sh
board/data/: devices.xml
board/fonts/: fonts.conf
board/script/: check.sh  env.sh  name.sh  restart.sh  run.sh  start.sh  stop.sh  version.sh
cmake/: features.cmake  option_helpers.cmake  other.cmake  prebuild.cmake  project.cmake
conf/: defualt_config.h
config/: config_info.h  defualt_config.h  series_config.h  series_info.h
docs/: README_BASE.md  wpa_connect.md
fonts/: README.md  fonts.conf
lang/: zh_CN.json
script/: README.md  audio_gain_batch.py  audio_gain_batch_old.py  build.sh  cdroid_patch.sh  checkLang.py  env.sh  file_count.sh  fill_bg.py  fonts.sh  hana_frame.ps1  kk_frame.ps1  nfs.sh  ota.py  png_to_bmp32.py  prebuild.sh  project_patch.sh  pull.sh  release.sh  run.sh  start.sh  updating.sh  upgrade.sh  x64.sh
script/device/: env.sh  mount.sh  pull.sh  updating.sh  upgrade.sh
src/: common.h  quick_define.h
src/app/: app_common.h
src/app/data/: base_data.h  global_data.cc  global_data.h  struct.h
src/app/managers/: audio_mgr.cc  audio_mgr.h  auth_mgr.cc  auth_mgr.h  config_mgr.cc  config_mgr.h  history_mgr.cc  history_mgr.h  http_mgr.cc  http_mgr.h  memory_mgr.cc  (+19 more)
src/buzzer/: music_player.cc  music_player.h
src/class/: auto_save.cc  auto_save.h  button_group.cc  button_group.h  chinese_calendar.cc  chinese_calendar.h  custom_app.cc  custom_app.h  ntp_sync.cc  ntp_sync.h  wifi_adapter.cc  wifi_adapter.h
src/comm/: README.md
src/common/: comm_class.cc  comm_class.h  comm_func.cc  comm_func.h  common.h  common_time.cc  common_time.h  hv_time_common.cc  hv_time_common.h  json_func.cc  json_func.h  tuya_func.cc  tuya_func.h
src/data/: base_data.h  struct.h
src/function/: json_func.cc  json_func.h  this_func.cc  this_func.h  tuya_func.cc  tuya_func.h
src/i2c/: hw_i2c_impl.cc  hw_i2c_impl.h  i2c_client.cc  i2c_client.h  i2c_mcu.cc  i2c_mcu.h  sw_i2c.c  sw_i2c.h  sw_i2c_gpio.c
src/net/: client.cc  client.h  socket_client.cc  socket_client.h  socket_server.cc  socket_server.h
src/page/: page_home.cc  pop_lock.cc  pop_tip.cc
src/project/: config_mgr.cc  config_mgr.h  global_data.cc  global_data.h  this_func.cc  timer_mgr.cc  timer_mgr.h  work_mgr.cc  work_mgr.h  work_timer.cc  work_timer.h
src/protocol/: btn_mgr.cc  btn_mgr.h  cmd_handler.cc  cmd_handler.h  conn_mgr.cc  conn_mgr.h  ipacket_buffer.h  mcu_ui.h  packet_base.h  packet_buffer.cc  packet_buffer.h  packet_handler.cc  packet_handler.h  proto.h  tuya_mgr.cc  tuya_mgr.h
src/template/: singleton.h
src/uart/: uart.h  uart2socket.h  uart_client.cc  uart_client.h
src/utils/: arg_utils.cc  arg_utils.h  cdroid_utils.cc  cdroid_utils.h  check_utils.cc  check_utils.h  encoding_utils.cc  encoding_utils.h  env_utils.cc  env_utils.h  file_utils.cc  file_utils.h  json_utils.cc  json_utils.h  math_utils.cc  math_utils.h  network_utils.cc  network_utils.h  project_utils.cc  project_utils.h  string_utils.cc  string_utils.h  system_utils.cc  system_utils.h  time_utils.cc  time_utils.h  tuya_utils.cc  tuya_utils.h  version_utils.cc  version_utils.h
src/viewlibs/: CMakeLists.txt  arc_seekbar.cc  arc_seekbar.h  baseItemAnimator.cc  baseItemAnimator.h  cKeyBoard.cc  cKeyBoard.h  cdroid_keyboard.cc  cdroid_keyboard.h  gaussFilter.c  gaussFilter.h  gaussfilterdrawable.cc  gaussfilterdrawable.h  gaussianblur.h  kk_keyboard.cc  kk_keyboard.h  paint.cc  pickerLayoutManager.cc  pickerLayoutManager.h  pickerSnapHelper.cc  pickerSnapHelper.h  rkLayoutManage.cc  rkLayoutManage.h  rvNumberPicker.cc  rvNumberPicker.h  video_view.cc  video_view.h  video_view_rk.cc  video_view_rk3506.cc  video_view_sigma.cc  video_view_x64.cc
src/widgets/: arc_seekbar.cc  arc_seekbar.h  baseItemAnimator.cc  baseItemAnimator.h  cKeyBoard.cc  cKeyBoard.h  gaussFilter.cc  gaussFilter.h  gauss_drawable.cc  gauss_drawable.h  gauss_view.cc  gauss_view.h  gravitySnapHelper.cc  gravitySnapHelper.h  net_image_view.cc  net_image_view.h  paint.h  pickerLayoutManager.cc  pickerSnapHelper.cc  pickerSnapHelper.h  rkLayoutManage.cc  rkLayoutManage.h  rvNumberPicker.cc  rvNumberPicker.h  touch_test_view.cc  touch_test_view.h  video_view.cc  video_view.h
src/wifi/: hv_wifi_sta.cc  hv_wifi_sta.h  wifi_adapter.cc  wifi_adapter.h  wifi_hal.cc  wifi_hal.h  wifi_mgr.cc  wifi_mgr.h  wpa_client.cc  wpa_client.h  wpa_ctrl.c  wpa_ctrl.h
src/windows/: base.cc  base.h  manage.cc  manage.h  msg.h  page_home.cc  page_home.h  page_standBy.cc  page_standBy.h  pop_lock.cc  pop_lock.h  pop_tip.cc  pop_tip.h  wind_base.cc  wind_base.h  wind_mgr.cc  wind_mgr.h
(+121 files in other folders)
